# pyarchetype

./: .gitignore  README.md  pyproject.toml  requests.txt
scripts/: compile_and_upload.sh  compile_only.sh  upload_pypi.sh
src/pyarchetype/: pyarchetype.py
src/pyarchetype/templates/: templates.py
tests/: test_cli.py
